Added optional client label to the request context and session table.